--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -22,9 +22,11 @@
     <div class="container">
         <div class="header row">
             <div class="avatar col-2">
-                <div class="avatarName">
-                    {{player}}
-                </div>
+                <a href="/main/playerProfile" alt="Wyloguj" title="Profil użytkownika">
+                    <div class="avatarName">
+                        {{player}}
+                    </div>
+                </a>
             </div>
             <div class="col-8">
                 <div class="stats">
