--- a/templates/main/playerProfile.html
+++ b/templates/main/playerProfile.html
@@ -87,7 +87,27 @@
             <!-- WYZWANIA -->
             <div id="challenges" class="tab-pane fade">
                 <h3 class="text-center">Wyzwania</h3>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <table class="table presencesTable">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Treść wyzwania</th>
+                                <th>Punkty</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1. </td>
+                                <td>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet </td>
+                                <td>40 pkt</td>
+                            </tr>
+                            <tr>
+                                <td>2. </td>
+                                <td>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet </td>
+                                <td>80 pkt</td>
+                            </tr>
+                        </tbody>
+                    </table>
             </div>
 
             <!-- OBECNOŚCI -->
