--- a/static/css/lesson.css
+++ b/static/css/lesson.css
@@ -35,9 +35,9 @@ body {
     width: 100px;
 }
 .lesson {
-    margin-left: 20%;
-    margin-right: 20%;
-    min-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 300px;
 }
 .lessonInfo{
     display: inline;
