--- a/static/css/lessonExcercise.css
+++ b/static/css/lessonExcercise.css
@@ -28,6 +28,7 @@ body {
     background-color: #eeeeeea1;
     border-radius: 10px;
     padding: 0.5rem;
+    text-indent: 4%;
 }
 .excerciseContent:first-of-type {
     margin-top: 30px;
