--- a/templates/login/index.html
+++ b/templates/login/index.html
@@ -6,6 +6,7 @@
 
     {% load staticfiles %}
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="{% static 'img/lesson/zad2_1.png' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-reboot.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-grid.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" />
