--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="{% static 'css/playerProfile.css' %}" />
     <link rel="stylesheet" href="{% static 'css/lesson.css' %}" />
     <link rel="stylesheet" href="{% static 'css/messages.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/settings.css' %}" />
 </head>
 
 <body>
@@ -82,7 +83,7 @@
                     <a data-toggle="modal" data-target="#logout">
                         <li><img src="/static/img/student_logout.png" alt="Wyloguj" title="Wyloguj"></li>
                     </a>
-                    <a href="/main/playerProfile">
+                    <a href="/main/settings">
                         <li><img src="/static/img/settings.png" alt="Ustawienia" title="Ustawienia"></li>
                     </a>
                     <a href="/main/messages">
