--- a/static/css/playerProfile.css
+++ b/static/css/playerProfile.css
@@ -11,6 +11,7 @@
     margin-top: 20px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #3b3b3b;
+    min-height: 600px;
 }
 .tabs{
     margin-top: 4rem;
