--- a/templates/main/playerProfile.html
+++ b/templates/main/playerProfile.html
@@ -16,7 +16,7 @@
         <div class="tab-content tabBorder">
             <div id="excercises" class="tab-pane fade in active">
                 <h3 class="text-center">Wyniki z zadań głównych</h3>
-
+                {% if answers.count > 1 %}
                 <table class="table messageTable detailsTable">
                     <thead>
                         <tr>
@@ -26,62 +26,39 @@
                             <th>Wynik [%]</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td>1 </td>
-                            <td>1 </td>
-                            <td>1 </td>
-                            <td>100% </td>
-                            <td class="detailsButton" data-toggle="collapse" data-target="#details">
-                                Szczegóły
-                            </td>
-                        </tr>
-                        <tr>
-                            <td id="detailsTd" colspan="5">
-                                <div id="details" class="collapse">
-
-                                    <h5>Treść zadania:</h3>
-                                    <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin tristique diam in elementum. Donec blandit magna sed nisi sollicitudin elementum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse id tempus libero, porta euismod enim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque faucibus urna metus, vitae posuere diam maximus et. Praesent tristique aliquet condimentum. </p>
-                                
-                                    <h5>Odpowiedź:</h3>
-                                    <p class="small text-justify">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse id tempus libero, porta euismod enim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque faucibus urna metus, vitae posuere diam maximus et. Praesent tristique aliquet condimentum.</p>
-                                
-                                </div>
-                            </td>
-                        </tr>
-
-
-                        <!-- 2 row -->
-                        <tr>
-                            <td>2 </td>
-                            <td>1 </td>
-                            <td>1 </td>
-                            <td>100% </td>
-                            <td class="detailsButton" data-toggle="collapse" data-target="#details2">
-                                Szczegóły
-                            </td>
-                        </tr>
-                        <tr>
-                            <td id="detailsTd" colspan="5">
-                                <div id="details2" class="collapse">
-
-                                    <h5>Treść zadania:</h3>
-                                    <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin tristique diam in elementum. Donec blandit magna sed nisi sollicitudin elementum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse id tempus libero, porta euismod enim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque faucibus urna metus, vitae posuere diam maximus et. Praesent tristique aliquet condimentum. </p>
-                                
-                                    <h5>Odpowiedź:</h3>
-                                    <p class="small text-justify">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse id tempus libero, porta euismod enim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque faucibus urna metus, vitae posuere diam maximus et. Praesent tristique aliquet condimentum.</p>
-                                
-                                </div>
-                            </td>
-                        </tr>
-                        <!-- 2 row -->
-
-
-                    </tbody>
+                    {% for answer in answers %}
+                        <tbody>
+                            <tr>
+                                <td>{{forloop.counter}}</td>
+                                <td>{{answer.stage.id}}</td>
+                                <td>{{answer.task.id}}</td>
+                                <td>{{answer.note}}</td>
+                                <td class="detailsButton" data-toggle="collapse" data-target="#details">
+                                    Szczegóły
+                                </td>
+                            </tr>
+                            <tr>
+                                <td id="detailsTd" colspan="5">
+                                    <div id="details" class="collapse">
+    
+                                        <h5>Treść zadania:</h3>
+                                        <p class="small text-justify">{{answer.task.content}}</p>
+                                    
+                                        <h5>Odpowiedź:</h3>
+                                        <p class="small text-justify">{{answer.answerSql}}</p>
+                                    
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>    
+                    {% endfor %}
                 </table>
                 <div>
-                    <p class="h3 average" align="center">Średnia z zadań: 77%</p>
+                    <p class="h3 average" align="center">Średnia z zadań: {{results_points}}%</p>
                 </div>
+                {% else %}
+                    <p>Brak ocenionych zadań</p>
+                {% endif %}
             </div>
             
             <!-- WYZWANIA -->
