--- a/templates/main/messages.html
+++ b/templates/main/messages.html
@@ -15,20 +15,20 @@
         <tr>
           <th scope="row">1</th>
           <td>Twoje rozwiązanie zostało ocenione!</td>
-          <td class="messageTableButton">Otwórz</td>
+          <td class="messageTableButton"><a href="/main/message">Otwórz</a></td>
           <td class="messageTableButton">Usuń</td>
         </tr>
 
         <tr>
           <th scope="row">2</th>
           <td>Twoje rozwiązanie zostało ocenione!</td>
-          <td class="messageTableButton">Otwórz</td>
+          <td class="messageTableButton"><a href="/main/message">Otwórz</a></td>
           <td class="messageTableButton">Usuń</td>
         </tr>
         <tr>
           <th scope="row">3</th>
           <td>Twoje rozwiązanie zostało ocenione!</td>
-          <td class="messageTableButton">Otwórz</td>
+          <td class="messageTableButton"><a href="/main/message">Otwórz</a></td>
           <td class="messageTableButton">Usuń</td>
         </tr>
 
