--- a/static/css/index.css
+++ b/static/css/index.css
@@ -23,6 +23,8 @@ body {
 .avatar a{
     text-decoration: none;
     color: #3b3b3b;
+    width:100%;
+    height:100%;  
 }
 .avatar a:hover{
     color: #6e6e6e;
