--- a/static/css/messages.css
+++ b/static/css/messages.css
@@ -1,5 +1,5 @@
 table {
-    margin-top: 3rem;
+    margin: 4rem 1rem 0 1rem;
     border: 0;
     border-collapse: separate;
     border-spacing: 0.5em;
@@ -33,6 +33,58 @@ table {
 }
 .messageTableButton:hover{
     background-color: orangered !important;
+}
+.messageTableButton a{
+    text-decoration: none;
+    color: #3b3b3b;
+    display:inline-block;
+    width:100%;
+    height:100%;  
+}
+.messageTableButton a:hover{
+    color: #3b3b3b;
+}
+/* MESSAGE */
+.messageDiv{
+    margin: 8% auto 0 auto;
+    width: 60%;
+    background-color: #eeeeeea1;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid rgb(90, 90, 90);
+    box-shadow: 5px 5px;
+}
+.messageDiv p {
+    background-color: rgb(255, 214, 81);;
+    text-indent: 4%;
+    font-size: 1.5rem;
+    border-radius: 5px 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    text-align: justify;
+    text-justify: inter-word;
+    border: 1px solid rgb(185, 185, 185);
+    box-shadow: 3px 3px;
+    font-style: italic;
+}
+.messageDiv .messageTitle{
+    text-indent: 0;
+    margin-top: 10px;
+    width: auto;
+    background-color: orange;
+    text-align: center;
+    font-size: 1.8rem;
+    font-style: inherit;
+}
+.board .leftArrow{
+    font-size: 4rem;
+    position: absolute;
+    padding: 10px 0 0 50px;
+    text-decoration: none;
+    color:#3b3b3b;
+}
+.board .leftArrow:hover{
+    color:#636363;
 }
 @media screen and (max-width: 992px){
     .board {
