Upload groups button

--- a/static/css/admin/base.css
+++ b/static/css/admin/base.css
@@ -93,6 +93,13 @@ body {
 .mainPlace{
     margin-left: 200px;
 }
+.custom-file{
+    margin-bottom: 10px;
+}
+.custom-file-input{
+    opacity: 1 !important;
+    
+}
 
 
 
