--- a/templates/admin/groups.html
+++ b/templates/admin/groups.html
@@ -34,6 +34,9 @@
                         <label>Nazwa</label>
                         <input class="form-control" placeholder="Nazwa grupy..." required>
                     </div>
+                    <div class="custom-file">
+                            <input type="file" class="custom-file-input" id="customFile">
+                          </div>
                     <button type="submit" class="btn btn-primary">Stwórz grupę</button>
                 </form>
             </div>
