--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -11,15 +11,14 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap-reboot.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/bootstrap-grid.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/bootstrap-datetimepicker.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/admin/base.css' %}" />
     <link rel="stylesheet" href="{% static 'css/admin/groups.css' %}" />
     <link rel="stylesheet" href="{% static 'css/admin/responses.css' %}" />
     <link rel="stylesheet" href="{% static 'css/admin/excercises.css' %}" />
     <link rel="stylesheet" href="{% static 'css/admin/groupDetails.css' %}" />
-
-    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </head>
 
 <body>
