--- a/templates/admin/groups.html
+++ b/templates/admin/groups.html
@@ -32,11 +32,11 @@
                 <form>
                     <div class="form-group">
                         <label>Nazwa</label>
-                        <input class="form-control" placeholder="Nazwa grupy..." required>
+                        <input class="form-control" placeholder="Nazwa grupy..." required minlength="5">
                     </div>
                     <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="customFile">
-                          </div>
+                        <input type="file" class="custom-file-input" id="customFile">
+                    </div>
                     <button type="submit" class="btn btn-primary">Stwórz grupę</button>
                 </form>
             </div>
