--- a/templates/admin/responses.html
+++ b/templates/admin/responses.html
@@ -16,12 +16,12 @@
     <form>
         <div class="form-group">
             <label><b>Przyznaj punkty</b></label>
-            <input class="form-control" placeholder="100">
+            <input class="form-control" placeholder="100" required type="number">
             <small class="form-text text-muted">Przyznaj odpowiednią ilość punktów.</small>
         </div>
         <div class="form-group">
             <label><b>Medal</b></label>
-            <select class="form-control">
+            <select required class="form-control">
                 <option value="" selected>-</option>
                 <option value="Medal precyzja Odyna">Medal precyzja Odyna</option>
                 <option value="Szybkie kopytko">Szybkie kopytko</option>
