Admin messages view

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="{% static 'css/admin/responses.css' %}" />
     <link rel="stylesheet" href="{% static 'css/admin/excercises.css' %}" />
     <link rel="stylesheet" href="{% static 'css/admin/groupDetails.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/admin/messages.css' %}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
@@ -30,7 +31,7 @@
                     <li><i class="fa fa-briefcase"></i><a href="/adminSite/excercises">Ćwiczenia</a></li>
                     <li><i class="fa fa-bell"></i><a href="/adminSite/challenges">Wyzwania</a></li>
                     <li><i class="fa fa-pencil"></i><a href="/adminSite/responses">Rozwiązania</a></li>
-                    <li><i class="fa fa-envelope"></i><a href="#">Wiadomości</a></li>
+                    <li><i class="fa fa-envelope"></i><a href="/adminSite/messages">Wiadomości</a></li>
                     <li><i class="fa fa-edit"></i><a href="#">Edycja</a></li>
                     <li><i class="fa fa-sign-out"></i><a href="#">Wyloguj</a></li>
                 </ul>
