--- a/templates/admin/groupDetails.html
+++ b/templates/admin/groupDetails.html
@@ -4,69 +4,53 @@
 <div class="container groupDetails">
     <div>
         <h3>Ranking grupowy</h3>
-        <table class="table table-striped table-responsive-sm table-sm">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Pkt rankingowe</th>
-                    <th scope="col">Imię</th>
-                    <th scope="col">Nazwisko</th>
-                    <th scope="col">Nr albumu</th>
-                    <th scope="col">E-mail</th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col">Obecność</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>450</td>
-                    <td>Artur</td>
-                    <td>Czopek</td>
-                    <td>123455</td>
-                    <td>arturo@mail.com</td>
-                    <td><button class="btn btn-primary">Pokaż</button></td>
-                    <td><button class="btn btn-info">Edytuj</button></td>
-                    <td><button class="btn btn-danger">Usuń</button></td>
-                    <td><button class="btn">Napisz</button></td>
-                    <td>
-                        <div>
-                            <input type="checkbox" />
-                            <input type="checkbox" />
-                            <input type="checkbox" />
-                            <input type="checkbox" />
-                            <input type="checkbox" />
-                            <input type="checkbox" />
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>450</td>
-                    <td>Artur</td>
-                    <td>Czopek</td>
-                    <td>123455</td>
-                    <td>arturo@mail.com</td>
-                    <td><button class="btn btn-primary">Pokaż</button></td>
-                    <td><button class="btn btn-info">Edytuj</button></td>
-                    <td><button class="btn btn-danger">Usuń</button></td>
-                    <td><button class="btn">Napisz</button></td>
-                    <td>
-                        <div>
-                            <input type="checkbox" />
-                            <input type="checkbox" />
-                            <input type="checkbox" />
-                            <input type="checkbox" />
-                            <input type="checkbox" />
-                            <input type="checkbox" />
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        {% if students|length  > 0 %}
+            <table class="table table-striped table-responsive-sm table-sm">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Pkt rankingowe</th>
+                        <th scope="col">Imię</th>
+                        <th scope="col">Nazwisko</th>
+                        <th scope="col">Nr albumu</th>
+                        <th scope="col">E-mail</th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col">Obecność</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for student in students %}
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>450</td>
+                            <td>{{student.first_name}}</td>
+                            <td>{{student.last_name}}</td>
+                            <td>{{student.username}}</td>
+                            <td>{{student.email}}</td>
+                            <td><button class="btn btn-primary">Pokaż</button></td>
+                            <td><button class="btn btn-info">Edytuj</button></td>
+                            <td><button class="btn btn-danger">Usuń</button></td>
+                            <td><button class="btn">Napisz</button></td>
+                            <td>
+                                <div>
+                                    <input type="checkbox" />
+                                    <input type="checkbox" />
+                                    <input type="checkbox" />
+                                    <input type="checkbox" />
+                                    <input type="checkbox" />
+                                    <input type="checkbox" />
+                                </div>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <div class="alert alert-warning" role="alert"> Brak studentów w grupie </div>
+        {% endif %}
         <button class="btn btn-primary btn-sm">Zapisz obecności</button>
     </div>
     <div class="row">
