--- a/templates/admin/excercises.html
+++ b/templates/admin/excercises.html
@@ -2,44 +2,53 @@
 
 {% block content %}
     <div class="container excerciseContent">
+        <h1 align="center">Ćwiczenia</h1>
         <div class="row">
-            <div class="col-2 arrowIcon">
-                <i class="fa fa-angle-left fa-5x"></i>
-            </div>
+            <a class="col stage">Lekcja 1</a>
+            <a class="col stage">Lekcja 2</a>
+            <a class="col stage">Lekcja 3</a>
+        </div>
+        <div class="row">
+            <a class="col stage">Lekcja 4</a>
+            <a class="col stage">Lekcja 5</a>
+            <a class="col stage">Lekcja 6</a>
+        </div>
 
-            <div class="col-8">
-                <h2 align="center">Lekcja 1</h2>
-                <h3 align="center">Zadanie 1</h3>
-                <label>Fabuła</label>
-                <p class="font-italic" align="center">Koszmar</p>
-                <p class="story">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                </p>
-            
-                <form class="excerciseForm">
-                    <div class="form-group">
-                    <label>Treść zadania</label>
-                    <textarea class="form-control" rows="5" placeholder="Treść zadania..."></textarea>
-                    </div>
-                    <div class="form-group">
-                    <label>Podpowiedź</label>
-                    <textarea class="form-control" rows="2" placeholder="Treść podpowiedzi..."></textarea>
-                    </div>
-                    <div class="form-group">
-                    <label>Wariant</label>
-                    <input class="form-control">
-                    </div>
-                    <div class="form-group">
-                    <label>Nagroda</label>
-                    <input class="form-control">
-                    </div>
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-primary text-center">Akceptuj</button>
-                    </div>
-                </form>
+        <div class="row excercisesList">
+            <div class="col-6">
+                <table class="table table-hover bg-light table-sm">
+                    <thead>
+                        <tr>
+                            <th>Numer zadania
+                            <th>Poziom trudności
+                        </tr>
+                    </thead>
+                    <tbody>
+                            <tr>
+                                <td>1
+                                <td>1
+                                <td><button class="btn btn-info">Edytuj</button>
+                                <td><a href=""><button class="btn btn-danger">Usuń</button></a>
+                            </tr>
+                            <tr>
+                                <td>5
+                                <td>4
+                                <td><button class="btn btn-info">Edytuj</button>
+                                <td><a href=""><button class="btn btn-danger">Usuń</button></a>
+                            </tr>
+                            <tr>
+                                <td>1221
+                                <td>5
+                                <td><button class="btn btn-info">Edytuj</button>
+                                <td><a href=""><button class="btn btn-danger">Usuń</button></a>
+                            </tr>
+                    </tbody>
+                </table>
             </div>
-            <div class="col-2 arrowIcon">
-                <i class="fa fa-angle-right fa-5x"></i>
+            <div class="col-6">
+                <a class="addButton" href="/adminSite/excerciseDetails"><button class="btn btn-primary"> Dodaj nowe zadanie </button></a>
             </div>
         </div>
+        
     </div>
 {% endblock %}
