--- a/templates/admin/excercises.html
+++ b/templates/admin/excercises.html
@@ -3,15 +3,17 @@
 {% block content %}
     <div class="container excerciseContent">
         <h1 align="center">Ćwiczenia</h1>
-        <div class="row">
-            <a class="col stage">Lekcja 1</a>
-            <a class="col stage">Lekcja 2</a>
-            <a class="col stage">Lekcja 3</a>
-        </div>
-        <div class="row">
-            <a class="col stage">Lekcja 4</a>
-            <a class="col stage">Lekcja 5</a>
-            <a class="col stage">Lekcja 6</a>
+        <div class="tiles">
+            <div class="row">
+                <a class="col stage">Lekcja 1</a>
+                <a class="col stage">Lekcja 2</a>
+                <a class="col stage">Lekcja 3</a>
+            </div>
+            <div class="row">
+                <a class="col stage">Lekcja 4</a>
+                <a class="col stage">Lekcja 5</a>
+                <a class="col stage">Lekcja 6</a>
+            </div>
         </div>
 
         <div class="row excercisesList">
@@ -49,6 +51,6 @@
                 <a class="addButton" href="/adminSite/excerciseDetails"><button class="btn btn-primary"> Dodaj nowe zadanie </button></a>
             </div>
         </div>
-        
+
     </div>
 {% endblock %}
