--- a/templates/admin/messages.html
+++ b/templates/admin/messages.html
@@ -4,7 +4,7 @@
 <div class="container messagesBody">
     <h1>Wiadomości</h1>
     <form>
-        <table class="table table-striped table-sm">
+        <table class="table table-striped table-dark table-sm table-responsive-sm">
             <thead align="center">
                 <tr>
                     <th scope="col"><input id="all" class="checkjq" type="checkbox" /></th>
