--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -28,7 +28,7 @@
                 <ul id="myDIV">
                     <span class="logo">VIKINGS</span>
                     <li class="active"><i class="fa fa-users"></i><a href="/adminSite">Grupy</a></li>
-                    <li><i class="fa fa-briefcase"></i><a href="/adminSite/students">Studenci</a></li>
+                    <li><i class="fa fa-graduation-cap"></i><a href="/adminSite/students">Studenci</a></li>
                     <li><i class="fa fa-briefcase"></i><a href="/adminSite/excercises">Ćwiczenia</a></li>
                     <li><i class="fa fa-bell"></i><a href="/adminSite/challenges">Wyzwania</a></li>
                     <li><i class="fa fa-pencil"></i><a href="/adminSite/responses">Rozwiązania</a></li>
