--- a/templates/admin/groupDetails.html
+++ b/templates/admin/groupDetails.html
@@ -25,7 +25,7 @@
                     {% for student in students %}
                         <tr>
                             <th scope="row">1</th>
-                            <td>450</td>
+                            <td>{{student.points}}</td>
                             <td>{{student.first_name}}</td>
                             <td>{{student.last_name}}</td>
                             <td>{{student.username}}</td>
