--- a/templates/admin/editExcercise.html
+++ b/templates/admin/editExcercise.html
@@ -19,10 +19,9 @@
                     {% endif %}
             </h3>
         
-            <form class="excerciseForm" action="{% url 'adminSite:excerciseDetails' task.task_id %}" method="POST">
-                {% csrf_token %}
+            <form class="excerciseForm">
                 <label>Poziom trudności</label>
-                <select class="form-control" required id="difficulty_level" name="difficulty_level">
+                <select class="form-control" required>
                     {% for x in range %}
                         {% if task != None and forloop.counter == task.difficulty_level %}
                             <option value="{{forloop.counter}}" selected>{{forloop.counter}}</option>
@@ -33,26 +32,15 @@
                 </select>
                 <div class="form-group">
                     <label>Treść zadania</label>
-                    <textarea class="form-control" rows="5" placeholder="Treść zadania..." required minlength="20" id="task_content" name="task_content">
-{{task.task_content}}
-                    </textarea>
-                </div>
-                <div class="form-group">
-                    <label>Odpowiedź</label>
-                    <textarea class="form-control" rows="5" placeholder="Odpowiedź..." required minlength="20" id="sampleAnswer" name="sampleAnswer">
-{{task.sample_answer}}
-                    </textarea>
+                    <textarea class="form-control" rows="5" placeholder="Treść zadania..." required minlength="20">{{task.task_content}}</textarea>
                 </div>
                 <div class="form-group">
                     <label>Podpowiedź</label>
-                    <textarea class="form-control" rows="2" placeholder="Treść podpowiedzi..." required minlength="10" id="prompt" name="prompt">
-{{task.prompt}}
-
-                    </textarea>
+                    <textarea class="form-control" rows="2" placeholder="Treść podpowiedzi..." required minlength="10">{{task.prompt}}</textarea>
                     </div>
                 <div class="form-group">
                     <label>Nagroda</label>
-                    <input placeholder="100" class="form-control" title="Nagroda" required type="number" min="10" name="points" id="points" value="{{task.points}}">
+                    <input placeholder="100" class="form-control" title="Nagroda" required type="number" min="10" value="{{task.points}}">
                 </div>
                 <div class="text-center">
                     <button type="submit" class="btn btn-primary text-center w-25">Zapisz</button>
